Fixed double scrollbar when content width > vw width

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -1,5 +1,6 @@
 @import 'core'
 html
+    overflow-y: hidden
     body
         > div.loading
             @extend .abs-center
